--- a/maja.html
+++ b/maja.html
@@ -9,10 +9,10 @@
 </head>
 
 <body>
-  <h1>Animeeritud SVG Maja</h1>
+  <h1>SVG Maja</h1>
 
   <div class="raam">
-    <svg width="1100px" height="1100px" viewBox="0 0 400 400" xmlns="http://www.w3.org/2000/svg">
+    <svg width="1000px" height="1000px" viewBox="0 0 400 400" xmlns="http://www.w3.org/2000/svg">
       
       <!-- Taeva gradient -->
       <defs>
